# example-package-ramos

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
example_package_ramos.egg-info/: PKG-INFO  SOURCES.txt
src/example_package_ramos/: example.py
