[build-system]
requires = ["hatchling == 1.21"]
build-backend = "hatchling.build"

[project]
name = "example_package_ramos"
version = "0.2.10"  # Ensure this is the correct version
authors = [
  { name="Marco Ramos", email="ramosmarco95@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ramosmarco95/example-package-ramos"
Issues = "https://github.com/ramosmarco95/example-package-ramos/issues"
